tests/snapshots/replay__milestone0_multi_tool_chain.snap
---
source: tests/e2e_engine_v2_milestone0.rs
---
scenario_id: multi_tool_chain
response_count: 1
has_final_response: true
llm_calls: 3
tool_calls_total: 2
tool_calls_failed: 0
max_failed_tool_streak: 0
hit_iteration_limit: false
safety_warning_count: 0
tool_sequence:
  - echo
  - time
engine_threads:
  - final_state: Done
    step_count: 3
    action_failed_events: 0
    code_execution_failed_events: 0
    approval_requested_events: 0
    issue_categories:
      - mixed_mode
