tests/snapshots/replay__milestone0_repeated_action_error_forced_finalize.snap
---
source: tests/e2e_engine_v2_milestone0.rs
---
scenario_id: repeated_action_error_forced_finalize
response_count: 1
has_final_response: true
llm_calls: 3
tool_calls_total: 3
tool_calls_failed: 3
max_failed_tool_streak: 3
hit_iteration_limit: false
safety_warning_count: 0
tool_sequence:
  - json
  - json
  - json
engine_threads:
  - final_state: Done
    step_count: 3
    action_failed_events: 3
    code_execution_failed_events: 0
    approval_requested_events: 0
    issue_categories:
      - tool_error
      - tool_error
      - tool_error
      - mixed_mode
