tests/snapshots/replay__milestone0_repeated_action_error_switches_strategy.snap
---
source: tests/e2e_engine_v2_milestone0.rs
---
scenario_id: repeated_action_error_switches_strategy
response_count: 1
has_final_response: true
turn_count: 1
llm_calls: 4
tool_calls_total: 3
tool_calls_failed: 2
duplicate_tool_calls: 1
max_failed_tool_streak: 2
hit_iteration_limit: false
safety_warning_count: 0
saw_finalization_hint: true
saw_no_new_evidence_hint: false
saw_repeated_error_nudge: true
saw_local_execution_bias_hint: false
tool_sequence:
  - json
  - json
  - echo
engine_threads:
  - final_state: Done
    step_count: 4
    action_failed_events: 2
    code_execution_failed_events: 0
    approval_requested_events: 0
    issue_categories:
      - tool_error
      - tool_error
      - mixed_mode
