tests/snapshots/replay__milestone0_simple_task_finalization_hint.snap
---
source: tests/e2e_engine_v2_milestone0.rs
---
scenario_id: simple_task_finalization_hint
response_count: 1
has_final_response: true
llm_calls: 2
tool_calls_total: 1
tool_calls_failed: 0
max_failed_tool_streak: 0
hit_iteration_limit: false
safety_warning_count: 0
tool_sequence:
  - echo
engine_threads:
  - final_state: Done
    step_count: 2
    action_failed_events: 0
    code_execution_failed_events: 0
    approval_requested_events: 0
    issue_categories:
      - mixed_mode
