tests/snapshots/replay__tool_error_recovery_v2.snap
---
source: tests/e2e_engine_v2.rs
assertion_line: 550
---
response_count: 1
has_final_response: true
tool_calls:
  - name: json
    success: false
events:
  - kind: thinking
    message: processing...
  - kind: thinking
    message: calling llm...
  - kind: thinking
    message: step complete — 100 in / 25 out tokens
  - kind: other
    variant: Other
  - kind: tool_started
    name: json
  - kind: tool_completed
    name: json
    success: false
    error: "tool 'json' failed: tool error: tool jso"
  - kind: thinking
    message: calling llm...
  - kind: thinking
    message: step complete — 180 in / 35 out tokens
  - kind: other
    variant: Other
  - kind: status
    message: done
  - kind: other
    variant: Other
event_kind_counts:
  Other: 3
  Status: 1
  Thinking: 5
  ToolCompleted: 1
  ToolStarted: 1
llm_call_count: 2
safety_warning_count: 0
engine_threads:
  - final_state: Done
    step_count: 2
    message_roles:
      - System
      - User
      - Assistant
    event_kinds:
      - MessageAdded
      - StateChanged
      - StepStarted
      - StepCompleted
      - ActionFailed
      - StepStarted
      - StepCompleted
      - StateChanged
      - MessageAdded
      - StateChanged
    issues:
      - severity: warning
        category: tool_error
      - severity: info
        category: mixed_mode
